# sval_protobuf

./: Cargo.toml  README.md
.github/workflows/: protobuf.yml
bench/: Cargo.toml  lib.rs
examples/: protoscope.rs
src/: buf.rs  lib.rs  raw.rs  stream.rs  tags.rs
src/buf/: cursor.rs  visit.rs  visitor.rs
test/: Cargo.toml  build.rs
test/protos/: cases.proto
test/src/: lib.rs  opentelemetry.rs
test/src/opentelemetry/: data_sval.rs  prost.rs
