[package]
name = "sval_protobuf"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0 OR MIT"

[workspace]
members = [
    "bench",
    "test"
]

[dependencies.sval]
version = "2.8"
features = ["alloc"]

[dependencies.bytes]
version = "1"
optional = true

[dev-dependencies.sval_derive]
version = "2.8"
features = ["alloc", "flatten"]
