[package]
name = "sval_protobuf"
version = "0.3.0"
authors = ["Ashley Mannix <ashleymannix@live.com.au>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
documentation = "https://docs.rs/sval_protobuf"
description = "protobuf encoding for sval"
repository = "https://github.com/KodrAus/sval_protobuf"
readme = "README.md"
keywords = ["serialization", "no_std"]
categories = ["encoding", "no-std"]

[workspace]
members = [
    "bench",
    "test"
]

[dependencies.sval]
version = "2.8"
features = ["alloc"]

[dependencies.bytes]
version = "1"
optional = true

[dev-dependencies.sval_derive]
version = "2.8"
features = ["alloc", "flatten"]

[profile.release]
debug = true
