[package]
name = "sval_protobuf_bench"
version = "0.0.0"
publish = false
edition = "2021"

[lib]
path = "lib.rs"

[features]
prost = ["dep:prost", "sval_protobuf_test/prost"]

[dependencies.sval_protobuf]
path = "../"

[dependencies.sval_protobuf_test]
path = "../test"
default-features = false

[dependencies.sval]
version = "2.8"

[dependencies.prost]
version = "0.14"
optional = true

[dependencies.bytes]
version = "1"
