[package]
name = "sval_protobuf_test"
version = "0.0.0"
publish = false
edition = "2021"
build = "build.rs"

[dependencies.sval_protobuf]
path = "../"

[dependencies.sval]
version = "2.8"

[dependencies.sval_derive]
version = "2.8"
features = ["flatten"]

[dependencies.prost]
version = "0.13"

[dependencies.bytes]
version = "1"

[build-dependencies.prost-build]
version = "0.13"
